--- a/css/style.css
+++ b/css/style.css
@@ -54,16 +54,15 @@ main#container2 {
     background-color: purple;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
-    "titreRecherche"
-    "rechercheBar"
-    "filtres"
+    "section"
     "articles";
     grid-area: main;
 }
 section#filtersContainer {
     background-color: lightblue;
+    grid-area: section;
 }
 div.rechercheBar {
     background-color: silver;
@@ -79,6 +78,7 @@ div.filters {
 }
 div.filterRelou {
     display: flex;
+    flex-wrap: wrap;
 }
 div.filter {
     background-color: azure;
@@ -174,5 +174,13 @@ footer.basDePage {
     div.rechercheBarMobile {
         background-color: lightcoral;
         display: flex;
+    }
+    section.article1 {
+        border-radius: 0px;
+        margin: 0px;
+    }
+    aside.article2 {
+        border-radius: 0px;
+        margin: 0px;
     }
 }
