--- a/css/style.css
+++ b/css/style.css
@@ -118,16 +118,21 @@ section.article3 {
 }
 div.article3cards {
     background-color: black;
+    display: flex;
+    justify-content: space-around;
 }
 div.artcile3Part1 {
     display: flex;
 }
-div.artcile3Relou {
+div.artcile3Part2 {
     display: flex;
-    flex-direction: column;
+}
+div.artcile3Relou {
+    background-color: wheat;
 }
 div.cards {
-    background-color: wheat;
+    background-color: white;
+    margin: 8px;
 }
 footer.basDePage {
     background-color: gray;
@@ -138,6 +143,18 @@ footer.basDePage {
     
     header.navBar {
         background-color: lightpink;
+    }
+    div.article3cards {
+        flex-direction: column;
+        justify-content: center;
+    }
+    div.artcile3Part1 {
+        justify-content: center;
+        margin: 10px;
+    }
+    div.artcile3Part2 {
+        justify-content: center;
+        margin: 10px;
     }
 }
 /*Format mobile*/
@@ -173,5 +190,14 @@ footer.basDePage {
     aside.article2 {
         border-radius: 0px;
         margin: 0px;
+    }
+    div.article3cards {
+        flex-direction: column;
+    }
+    div.artcile3Part1 {
+        flex-direction: column;
+    }
+    div.artcile3Part2 {
+        flex-direction: column;
     }
 }
