--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ main#container2 {
     background-color: purple;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 0.5fr 3fr;
     grid-template-areas: 
     "section"
     "articles";
@@ -111,7 +111,23 @@ aside.article2 {
     border-radius: 15px;
     margin: 15px;
 }
-
+div.artcile2Title {
+    background-color: darksalmon;
+    display: flex;
+    justify-content: space-evenly;
+}
+div.cardsWithIcon {
+    background-color: chocolate;
+    display: flex;
+    justify-content: center;
+    margin: 8px;
+}
+div.cardDescripIcon {
+    background-color: coral;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 section.article3 {
     background-color: darkslateblue;
     grid-area: article3;
