--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 html {
     font-family: 'Raleway', sans-serif;
 }
-
 :root {
     --color1: #0065FC;
     --color2: #DEEBFF;
@@ -19,12 +18,11 @@ body {
 h1,h2,h3,h4,h5,h6 {
     margin-top: 0px;
     margin-bottom: 0px;
-    font-family: 'Raleway', sans-serif;
+    
 }
 p {
     margin-top: 0px;
     margin-bottom: 0px;
-    font-family: 'Raleway', sans-serif;
 }
 div#container1 {
     background-color: #F2F2F2;
@@ -40,6 +38,7 @@ div#container1 {
 header.navBar{
     background-color: turquoise;
 }
+
 div.headContainer {
     background-color: red;
     display: flex;
@@ -47,33 +46,40 @@ div.headContainer {
 div.logo {
     background-color: black;
     display: flex;
-    width: 150px;
-    height: 50px;
+    
+    /*object-fit: cover;
     background-image: url("../images/logo/Booki.png");
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    align-items: center;
+    background-repeat: no-repeat;*/
+}
+div.logo a{
+
+}
+div.logo a:hover{
+
+}
+div.logo img{
+    width: 100%;
+    height: 100px;
 }
 div.hybrid {
     background-color: #F2F2F2;
     flex-grow: 2;
 }
 div.hebergementBar {
-    background-color: #F2F2F2;
+    background-color: grey;
     display: flex;
-    flex-direction: row;
 }
-div.hebergement {
-    background-color: #F2F2F2;
-    display: flex;
-    flex-direction: row;
+div.hebergementBar a {
+    color: black;
+    text-decoration:none;
+    margin-right: 20px;
+    padding-top: 40px;
+    border-top: 3px solid transparent;
 }
-div.activites {
-    background-color: #F2F2F2;
-    color:#0065FC;
-    display: flex;
-    flex-direction: row;
+div.hebergementBar a:hover {
+    color: #0065FC;
+    border-top: 3px solid blue;
 }
 main#container2 {
     background-color: purple;
@@ -103,6 +109,10 @@ div.buttonLocalisationIcon {
     height: 50px;
     border-radius: 10px;
     align-items: center;
+}
+div.recherBarHolder{
+    display: flex;
+    border: solid lightgray 1px;
 }
 div.buttonResearch {
     width: 150px;
@@ -265,28 +275,37 @@ div.footInfo {
         "article3";
     }
     div.navBar {
-        flex-direction: column;
+        background-color: #DEEBFF;
     }
     div.headContainer {
-        flex-direction: column;
+        background-color: aquamarine;
         flex-direction: column;
     }
     div.logo {
-        justify-content: space-between;
-        width: 300px;
+        background-color: darkorchid;
+        justify-content: center;
         height: 150px;
-        background-image: url("../images/logo/Booki@3x.png");
+        /*background-image: url("../images/logo/Booki@3x.png");*/
     }
     div.hebergementBar {
-        flex-direction: column;
+        display: flex;
         justify-content: space-evenly;
         flex-direction: row;
+    }
+    div.hebergementBar a {
+        border-top: none;
+        border-bottom: 3px solid transparent;
+        padding-bottom: 20px;
+    }
+    div.hebergementBar a:hover {
+        border-top: none;
+        border-bottom: 3px solid blue;
     }
     div.hybrid {
         display: none;
     }
     div.filters {
-        flex-direction: column;
+        background-color: #DEEBFF;
     }
     div.rechercheBar { 
         display: none;
