--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ div.headContainer {
     display: flex;
 }
 div.logo {
-    background-color: black;
+    background-color: #F2F2F2;
     display: flex;
     
     /*object-fit: cover;
@@ -98,6 +98,7 @@ section#filtersContainer {
 div.rechercheBar {
     background-color: #F2F2F2;
     display: flex;
+    
 }
 div.rechercheBarMobile {
     display: none;
@@ -105,24 +106,35 @@ div.rechercheBarMobile {
 div.buttonLocalisationIcon {
     background-color: lightgrey;
     display: flex;
-    width: 50px;
+    width: 7%;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 10px 0px 0px 10px;
     align-items: center;
-}
-div.recherBarHolder{
     display: flex;
-    border: solid lightgray 1px;
+    align-items: center;
+    justify-content: center;
+}
+input.searchBar{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    padding: 20px;
+    border-top:  0.5px solid lightslategray;
+    border-bottom: 0.5px solid lightslategray;
 }
 div.buttonResearch {
     width: 150px;
     height: 50px;
     background-color: #0065FC;
     color: #DEEBFF;
+    border-radius: 0px 10px 10px 0px;
     display: flex;
     align-items: center;
+    justify-content: center;
     cursor: pointer;
-    border-radius: 10px;
+
 }
 div.buttonResearch:hover {
     background-color: #DEEBFF;
@@ -312,21 +324,37 @@ div.footInfo {
     }
     div.rechercheBarMobile {
         display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
     div.buttonMagnifyingGlass {
-        width: 50px;
+        width: 10%;
         height: 50px;
         background-color: #0065FC;
-        color: #DEEBFF;
         display: flex;
         align-items: center;
+        justify-content: center;
         cursor: pointer;
         border-radius: 10px;
     }
+    input.searchBarMobile{
+        width: 70%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        padding: 20px;
+        border-top:  0.5px solid lightslategray;
+        border-bottom: 0.5px solid lightslategray;
+    }
     div.buttonMagnifyingGlass:hover {
-        background-color: #DEEBFF;
+        height: 50px;
+        background-color: red;
         color: #0065FC;
         border-radius: 10px;
+       
     }
     section.article1 {
         border-radius: 0px;
