--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,8 @@ div.footInfo {
     }
     div.filters {
         background-color: #DEEBFF;
+        display: flex;
+        flex-direction: column;
     }
     div.rechercheBar { 
         display: none;
