--- a/css/style.css
+++ b/css/style.css
@@ -146,17 +146,31 @@ div.filters {
     display: flex;
     align-items: center;
 }
-div.filter {
-    background-color: darkmagenta;
-}
 div.filterRelou {
     display: flex;
-    margin-right: 10px;
+    margin-right: 10px; 
+    align-items: center;
+    justify-content: center;
 }
 div.filter {
-    background-color: azure;
+    background-color: #F2F2F2;
     display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 10px;
+    border: 2px solid lightgrey;
+    border-radius: 20px;
+    
+}
+div.filterIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    height: 40px;
+    width: 40px;
+    background-color: lightskyblue;
+    margin-left: -3px;
 }
 div.headInformation {
     background-color: slateblue;
