--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ div.buttonResearch {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-
 }
 div.buttonResearch:hover {
     background-color: #DEEBFF;
@@ -148,19 +147,15 @@ div.filters {
 }
 div.filterRelou {
     display: flex;
-    margin-right: 10px; 
-    align-items: center;
-    justify-content: center;
 }
 div.filter {
     background-color: #F2F2F2;
     display: flex;
+    border: 2px solid lightgrey;
     justify-content: center;
     align-items: center;
     margin: 10px;
-    border: 2px solid lightgrey;
     border-radius: 20px;
-    
 }
 div.filterIcon {
     display: flex;
@@ -170,7 +165,13 @@ div.filterIcon {
     height: 40px;
     width: 40px;
     background-color: lightskyblue;
+    color: #0065FC;
     margin-left: -3px;
+    margin-top: -2px;
+    margin-bottom: -2px;
+}
+div.filterIcon:hover {
+    color: white;
 }
 div.headInformation {
     background-color: slateblue;
@@ -340,6 +341,8 @@ div.footInfo {
         display: flex;
         flex-direction: column;
         align-items: unset;
+        justify-content: unset;
+        align-items: unset;
     }
     div.rechercheBar { 
         display: none;
@@ -374,10 +377,17 @@ div.footInfo {
     }
     div.buttonMagnifyingGlass:hover {
         height: 50px;
-        background-color: red;
-        color: #0065FC;
+        background-color: lightskyblue;
+        color: white;
         border-radius: 10px;
        
+    }
+    div.filterRelou {
+        justify-content: unset;
+    }
+    div.filter {
+        justify-content: unset;
+        /*margin: auto;*/
     }
     section.article1 {
         border-radius: 0px;
